Add Rust socket client and Docker integration
Test out copilot workspace to create a socket client in Rust that will handle prompting the local LLM.

This client will serve as a POC for other clients

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
     environment:
       HF_HOME: /usr/llm/.cache
     env_file: .env
+
+  client:
+    build:
+      context: .
+      target: rust-client
+    volumes:
+      - ./rust:/usr/src/rust
